[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oshdatacore"
version = "0.0.1-alpha.15"
authors = [
    { name = "Ian Patterson", email = "ian@botts-inc.com" }
]
description = """A SWE Common Data Model representation in Python"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://opensensorhub.org/"